// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Test Buttons Components IOButton Snapshot · Link variant 1`] = `
<View
  accessibilityLabel="accessibilityLabel"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": false,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  hitSlop={
    {
      "bottom": 14,
      "left": 24,
      "right": 24,
      "top": 14,
    }
  }
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignSelf": "flex-start",
    }
  }
>
  <View
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
      }
    }
    jestInlineStyle={
      [
        {
          "alignItems": "center",
          "borderCurve": "continuous",
          "elevation": 0,
          "flexDirection": "row",
          "justifyContent": "center",
          "overflow": "hidden",
          "textAlignVertical": "center",
        },
        {
          "paddingHorizontal": 0,
        },
        {
          "backgroundColor": "transparent",
          "borderColor": "#0B3EE3",
          "borderRadius": 8,
          "borderWidth": 0,
          "height": undefined,
        },
        {},
      ]
    }
    style={
      [
        {
          "alignItems": "center",
          "borderCurve": "continuous",
          "elevation": 0,
          "flexDirection": "row",
          "justifyContent": "center",
          "overflow": "hidden",
          "textAlignVertical": "center",
        },
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
        {},
        {
          "paddingHorizontal": 0,
        },
        {
          "backgroundColor": "transparent",
          "borderColor": "#0B3EE3",
          "borderRadius": 8,
          "borderWidth": 0,
          "height": undefined,
        },
        {},
      ]
    }
  >
    <View
      collapsable={false}
      jestAnimatedProps={
        {
          "value": {},
        }
      }
      jestAnimatedStyle={
        {
          "value": {},
        }
      }
      jestInlineStyle={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          },
          {
            "columnGap": 8,
          },
          false,
        ]
      }
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          },
          {
            "columnGap": 8,
          },
          false,
        ]
      }
    >
      <Text
        accessibilityElementsHidden={true}
        accessible={false}
        allowFontScaling={true}
        collapsable={false}
        ellipsizeMode="tail"
        importantForAccessibility="no-hide-descendants"
        jestAnimatedProps={
          {
            "value": {},
          }
        }
        jestAnimatedStyle={
          {
            "value": {
              "color": "rgba(11, 62, 227, 1)",
            },
          }
        }
        jestInlineStyle={
          [
            {
              "textAlign": "auto",
            },
            {
              "color": "#0B3EE3",
            },
          ]
        }
        maxFontSizeMultiplier={1.5}
        numberOfLines={1}
        style={
          [
            {},
            {
              "color": undefined,
              "fontFamily": "Titillio",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": "600",
              "lineHeight": 20,
            },
            [
              {
                "textAlign": "auto",
              },
              {
                "color": "#0B3EE3",
              },
              {
                "color": "rgba(11, 62, 227, 1)",
              },
            ],
          ]
        }
      >
        label
      </Text>
    </View>
  </View>
</View>
`;

exports[`Test Buttons Components IOButton Snapshot · Outline variant 1`] = `
<View
  accessibilityLabel="accessibilityLabel"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": false,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignSelf": "auto",
      "flexShrink": 1,
    }
  }
>
  <View
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {
          "backgroundColor": "rgba(9, 50, 182, 0)",
          "borderColor": "rgba(11, 62, 227, 1)",
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
      }
    }
    jestInlineStyle={
      [
        {
          "alignItems": "center",
          "borderCurve": "continuous",
          "elevation": 0,
          "flexDirection": "row",
          "justifyContent": "center",
          "overflow": "hidden",
          "textAlignVertical": "center",
        },
        {
          "paddingHorizontal": 24,
        },
        {
          "backgroundColor": "rgba(9,50,182,0)",
          "borderColor": "#0B3EE3",
          "borderRadius": 8,
          "borderWidth": 2,
          "height": 48,
        },
        {},
      ]
    }
    style={
      [
        {
          "alignItems": "center",
          "borderCurve": "continuous",
          "elevation": 0,
          "flexDirection": "row",
          "justifyContent": "center",
          "overflow": "hidden",
          "textAlignVertical": "center",
        },
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
        {
          "backgroundColor": "rgba(9, 50, 182, 0)",
          "borderColor": "rgba(11, 62, 227, 1)",
        },
        {
          "paddingHorizontal": 24,
        },
        {
          "backgroundColor": "rgba(9,50,182,0)",
          "borderColor": "#0B3EE3",
          "borderRadius": 8,
          "borderWidth": 2,
          "height": 48,
        },
        {},
      ]
    }
  >
    <View
      collapsable={false}
      jestAnimatedProps={
        {
          "value": {},
        }
      }
      jestAnimatedStyle={
        {
          "value": {},
        }
      }
      jestInlineStyle={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          },
          {
            "columnGap": 8,
          },
          false,
        ]
      }
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          },
          {
            "columnGap": 8,
          },
          false,
        ]
      }
    >
      <Text
        accessibilityElementsHidden={true}
        accessible={false}
        allowFontScaling={true}
        collapsable={false}
        ellipsizeMode="tail"
        importantForAccessibility="no-hide-descendants"
        jestAnimatedProps={
          {
            "value": {},
          }
        }
        jestAnimatedStyle={
          {
            "value": {
              "color": "rgba(11, 62, 227, 1)",
            },
          }
        }
        jestInlineStyle={
          [
            {
              "textAlign": "auto",
            },
            {
              "color": "#0B3EE3",
            },
          ]
        }
        maxFontSizeMultiplier={1.5}
        numberOfLines={1}
        style={
          [
            {},
            {
              "color": undefined,
              "fontFamily": "Titillio",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": "600",
              "lineHeight": undefined,
            },
            [
              {
                "textAlign": "auto",
              },
              {
                "color": "#0B3EE3",
              },
              {
                "color": "rgba(11, 62, 227, 1)",
              },
            ],
          ]
        }
      >
        label
      </Text>
    </View>
  </View>
</View>
`;

exports[`Test Buttons Components IOButton Snapshot · Solid variant 1`] = `
<View
  accessibilityLabel="accessibilityLabel"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": false,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignSelf": "auto",
      "flexShrink": 1,
    }
  }
>
  <View
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {
          "backgroundColor": "rgba(11, 62, 227, 1)",
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
      }
    }
    jestInlineStyle={
      [
        {
          "alignItems": "center",
          "borderCurve": "continuous",
          "elevation": 0,
          "flexDirection": "row",
          "justifyContent": "center",
          "overflow": "hidden",
          "textAlignVertical": "center",
        },
        {
          "paddingHorizontal": 24,
        },
        {
          "backgroundColor": "#0B3EE3",
          "borderColor": "#FFFFFF",
          "borderRadius": 8,
          "borderWidth": 0,
          "height": 48,
        },
        {},
      ]
    }
    style={
      [
        {
          "alignItems": "center",
          "borderCurve": "continuous",
          "elevation": 0,
          "flexDirection": "row",
          "justifyContent": "center",
          "overflow": "hidden",
          "textAlignVertical": "center",
        },
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
        {
          "backgroundColor": "rgba(11, 62, 227, 1)",
        },
        {
          "paddingHorizontal": 24,
        },
        {
          "backgroundColor": "#0B3EE3",
          "borderColor": "#FFFFFF",
          "borderRadius": 8,
          "borderWidth": 0,
          "height": 48,
        },
        {},
      ]
    }
  >
    <View
      collapsable={false}
      jestAnimatedProps={
        {
          "value": {},
        }
      }
      jestAnimatedStyle={
        {
          "value": {},
        }
      }
      jestInlineStyle={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          },
          {
            "columnGap": 8,
          },
          false,
        ]
      }
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          },
          {
            "columnGap": 8,
          },
          false,
        ]
      }
    >
      <Text
        accessibilityElementsHidden={true}
        accessible={false}
        allowFontScaling={true}
        collapsable={false}
        ellipsizeMode="tail"
        importantForAccessibility="no-hide-descendants"
        jestAnimatedProps={
          {
            "value": {},
          }
        }
        jestAnimatedStyle={
          {
            "value": {
              "color": "rgba(255, 255, 255, 1)",
            },
          }
        }
        jestInlineStyle={
          [
            {
              "textAlign": "auto",
            },
            {
              "color": "#FFFFFF",
            },
          ]
        }
        maxFontSizeMultiplier={1.5}
        numberOfLines={1}
        style={
          [
            {},
            {
              "color": undefined,
              "fontFamily": "Titillio",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": "600",
              "lineHeight": undefined,
            },
            [
              {
                "textAlign": "auto",
              },
              {
                "color": "#FFFFFF",
              },
              {
                "color": "rgba(255, 255, 255, 1)",
              },
            ],
          ]
        }
      >
        label
      </Text>
    </View>
  </View>
</View>
`;
